--- a/style.css
+++ b/style.css
@@ -16,14 +16,17 @@ p{
     margin-bottom: auto;
 }
 .mspace{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 .mspace2{
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 footer{
     margin-top: 20px;
     background-color: black;
     width: 100%;
     height:200px;
+}
+.carouselalign{
+ justify-content: center;
 }
